...
                    ForEach(Array(sortedAlbums.enumerated()), id: \.element.id) { index, review in
                        Button {
                            coordinator.navigate(to: .reviewDetail(review))
                        } label: {
                            ReviewComponentView(review: review)
                        }
                        .accessibilityIdentifier(index == 0 ? "firstSocialReviewCell" : "SocialReviewCell_\(review.id)")
                        .listRowSeparator(.hidden)
                        .listRowBackground(Color.clear)
                    }
                }
                .scrollContentBackground(.hidden)
                .listStyle(.plain)
...
